Bug 1473893 - Don't use parsed HTML MIME class if saving, processing attachments and in other cases. r=aceman